--- a/glide.yaml
+++ b/glide.yaml
@@ -1,3 +1,6 @@
-package: .
+package: github.com/barnybug/ener314
 import:
+- package: github.com/davecheney/gpio
+  subpackages:
+  - rpi
 - package: github.com/quinte17/spi
