--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,18 +5,25 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - name: Check out code
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - uses: actions/setup-go@v2
       with:
-        go-version: '1.14'
-
-    - name: Download Go dependencies
-      env:
-        GOPROXY: "https://proxy.golang.org"
-      run: go mod download
+        go-version: '1.15'
 
     - name: Run tests
       run: go test -v
 
     - name: Build cmd/ener314
       run: go build ./cmd/ener314
+
+    - name: Run GoReleaser
+      uses: goreleaser/goreleaser-action@v2
+      with:
+        version: latest
+        args: release --rm-dist
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  
